# A1_Maze

./: Makefile  Readme.md
model/: maze.cc  maze.h  path_find.cc  path_find.h  save_lab.cc  save_lab.h
tests/: mazeTest.cc  saved_maze1.txt
view/: CMakeLists.txt  Maze_new_ru_RU.ts  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
